# Desk

./: CMakeLists.txt  Desk.sln  GiperbolaDesk.sln  README.md
Desk/: Desk.vcxproj  Desk.vcxproj.filters  Main.cpp
Desk/include/: Desk.hpp  Network.hpp  ScreenViewer.hpp
Desk/src/: Desk.cpp  Network.cpp  ScreenViewer.cpp
GiperbolaDesk/: GiperbolaDesk.aps  GiperbolaDesk.vcxproj  GiperbolaDesk.vcxproj.filters  Main.cpp  resource.h
GiperbolaDesk/include/: Desk.hpp  Network.hpp  Protocol.hpp  ScreenManager.hpp  ScreenViewer.hpp  Widgets.hpp
GiperbolaDesk/src/: Desk.cpp  Network.cpp  ScreenViewer.cpp  Widgets.cpp
GiperbolaDesk/x64/Release/GiperbolaDesk.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
